scrm 1.3-3
==========

* Add dependency to R >= 3.1.0.



scrm 1.3-2
==========

* Add missing import statement.

* Fix access to unmapped memory.



scrm 1.3-1
==========

* Initial CRAN release.
