@@ -3,6 +3,8 @@ scrm 1.3-3
 
 * Add dependency to R >= 3.1.0.
 
+* Update scrm source to version 1.3.1.
+
 
 
 scrm 1.3-2
